--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "react-router-dom": "^7.0.1"
+    "formik": "^2.4.6",
+    "react-router-dom": "^7.0.1",
+    "yup": "^1.4.0"
   },
   "proxy": "http://localhost:5555"
 }
