--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ flask-cors==5.0.0
 flask-migrate==4.0.7; python_version >= '3.6'
 flask-restful==0.3.10
 flask-sqlalchemy==3.0.3; python_version >= '3.7'
+gunicorn==23.0.0
 greenlet==3.1.1; python_version < '3.13' and (platform_machine == 'aarch64' or (platform_machine == 'ppc64le' or (platform_machine == 'x86_64' or (platform_machine == 'amd64' or (platform_machine == 'AMD64' or (platform_machine == 'win32' or platform_machine == 'WIN32'))))))
 importlib-metadata==8.5.0; python_version < '3.10'
 importlib-resources==6.4.5; python_version < '3.9'
