--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ ptyprocess==0.7.0
 pure-eval==0.2.3
 pygments==2.18.0; python_version >= '3.8'
 python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+python-dotenv==1.0.1
 pytz==2024.2
 setuptools==75.3.0; python_version >= '3.8'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
