--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ decorator==5.1.1; python_version > '3.6'
 executing==2.1.0; python_version >= '3.8'
 faker==33.0.0; python_version >= '3.8'
 flask==2.2.5; python_version >= '3.7'
+flask-bcrypt
 flask-cors==5.0.0
 flask-migrate==4.0.7; python_version >= '3.6'
 flask-restful==0.3.10
