--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ parso==0.8.4; python_version >= '3.6'
 pexpect==4.9.0; sys_platform != 'win32'
 pickleshare==0.7.5
 prompt-toolkit==3.0.48; python_full_version >= '3.7.0'
+psycopg2-binary
 ptyprocess==0.7.0
 pure-eval==0.2.3
 pygments==2.18.0; python_version >= '3.8'
